# image_washer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-pages.yml
docs/: app.js  manifest.webmanifest  styles.css  sw.js
docs/pkg/: image_washer.js  image_washer_bg.wasm
scripts/: build-pages.sh  generate-icons.py
src/: lib.rs  main.rs
web/: app.js  index.html
